changed configuration so that it handles one channel at a time and only downloads from the last 2 months

--- a/yt-dlp.conf
+++ b/yt-dlp.conf
@@ -1,23 +1,25 @@
 -i
--o "%(uploader)s (%(uploader_id)s)/%(upload_date)s - %(title)s - (%(duration)ss) [%(resolution)s] [%(id)s].%(ext)s"
-
+-o '%(upload_date)s - %(title)s - (%(duration)ss) [%(resolution)s] [%(id)s].%(ext)s'
+-P '$HOME/videos'
+# In the last two weeks
+--dateafter today-2months
+--break-on-reject
 # Archive Settings
 --download-archive yt-dlp-archive.txt
--a yt-dlp-channels.txt
 
 # Uniform Format
 --prefer-ffmpeg
 --merge-output-format mkv
 
 # Get All Subs to SRT
---write-sub
---all-subs
---convert-subs srt
+#--write-sub
+#--all-subs
+#--convert-subs srt
 
 # Get metadata
---add-metadata
---write-description
---write-thumbnail
+#--add-metadata
+#--write-description
+#--write-thumbnail
 
 # Debug
 -v
